--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://myusername.github.io/timeslatorclient"
+  "homepage": "https://khapeterk.github.io/timeslatorclient/"
 }
